
if (TEST_SRT)
    find_package(Threads REQUIRED)
    add_executable(main-srt main-srt.cpp)
    target_link_libraries(main-srt SRTNet ${CMAKE_THREAD_LIBS_INIT})
else()
    add_executable(main main.cpp)
    find_package(owt_web_transport REQUIRED)
    find_package(uv REQUIRED)
    target_link_libraries(main owt_web_transport uv peer)
endif(TEST_SRT)