
if (TEST_SRT)
    # add_library(SRTNet SRTNet.cpp)
    # message(STATUS "11111111111111111111111111111")
    find_package(srt_lib REQUIRED)
    if(srt_FOUND)
        # target_link_libraries(SRTNet PRIVATE srt)
        message(STATUS srt)
        # target_include_directories(SRTNet INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
    else()
        message(STATUS "33333333333333333333333333333333333333333")
    endif(srt_FOUND)
else()
    add_library(peer peer.cpp)
    find_package(uv REQUIRED)
    target_link_libraries(peer PRIVATE uv)
    target_include_directories(peer INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
endif(TEST_SRT)