
if (TEST_SRT)
    message(STATUS "11111111111111111111111111111")
    # find_package(Threads REQUIRED)
    find_package(Threads REQUIRED)
    find_package(srt REQUIRED)
    add_library(SRTNet SRTNet.cpp)
    target_link_libraries(SRTNet srt ${CMAKE_THREAD_LIBS_INIT})
    target_include_directories(SRTNet INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
    if(srt_FOUND)
        message(STATUS "2222222222222222222222222222222222222222222222")
    else()
        message(STATUS "33333333333333333333333333333333333333333")
    endif(srt_FOUND)
else()
    add_library(peer peer.cpp)
    find_package(uv REQUIRED)
    target_link_libraries(peer PRIVATE uv)
    target_include_directories(peer INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
endif(TEST_SRT)